# wtprompt

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: run_tests.yaml
tests/: basic_load.py  conftest.py  test_basic_load.py  test_basic_operations.py  test_json_validator.py  test_preprocessor.py
tests/test_prompts/: fill_test.txt  hello.txt  list_fill_test.txt  preprocessor_config.json  test.json
tests/test_prompts/subfolder/: nested.txt
wtPrompt/: core.py  fill.py
wtPrompt/utils/: basic_operations.py  preprocessor.py  text.py
wtprompt/: __init__.py  core.py  fill.py
wtprompt/utils/: json_validator.py  preprocessor.py
